--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.13</version>
         </dependency>
+<!--GSON (JSON Serialization/Deserialization Library)-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
 </project>
